--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
+language: pythdist: xenial   # required for Python >= 3.7
 language: python
+python:
+  - "3.7"
+install:
+  - pip install -r requirements.txt
+  - pip install .
