--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: pythdist: xenial   # required for Python >= 3.7
 language: python
 python:
-  - "3.7"
+  - "3.6"
+# command to install dependencies
 install:
   - pip install -r requirements.txt
-  - pip install .
+# command to run tests
+script:
+  - pytest
