--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 python:
   - "3.6"
-# command to install dependencies
-install: 
-  -pip install --user -r requirements.txt
-# command to run tests
+cache: pip
+install:
+  - pip install -r requirements.txt
 script:
-  - pytest
+  - python tests.py
