--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,6 @@
 language: python
-script: pytest
-deploy:
-  provider: gae
-  keyfile: $GAE_KEY  # "YOUR SERVICE ACCOUNT JSON FILE"
-  project: $PROJECT_ID2  #"YOUR PROJECT ID"
-
-# deploy:
-#   provider: gcs
-#   access_key_id: "GCS Interoperable Access Key ID"
-#   secret_access_key: "GCS Interoperable Access Secret"
-#   bucket: "GCS Bucket"
-#   skip_cleanup: true
+cache: pip
+install:
+  - pip install -r requirements.txt
+script:
+  - python tests.py
